# telegram_bot

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: deploy.yaml
alembic/: env.py
bot/: __main__.py
bot/core/: config.py  loader.py
bot/databases/: bot_database.py
bot/databases/models/: __init__.py  base.py  measurements.py  profiles.py  projects.py  servers.py  test.py  user.py  yandexkeys.py
bot/dialogs/admin_menu/: __init__.py
bot/dialogs/admin_menu/main/: states.py  windows.py
bot/dialogs/admin_menu/main_stats/: getters.py  windows.py
bot/dialogs/admin_menu/projects/: getters.py  keywords.py  states.py  windows.py
bot/dialogs/admin_menu/projects/adding/: getters.py  windows.py
bot/dialogs/admin_menu/projects/list/: getters.py  windows.py
bot/dialogs/admin_menu/projects/preview/: getters.py  windows.py
bot/dialogs/admin_menu/testing/: getter.py  keywords.py  states.py  windows.py
bot/handlers/: export_users.py  info.py  menu.py  start.py  support.py
bot/handlers/on_click/: main_stats.py  projects.py  testing.py
bot/keyboards/: default_commands.py
bot/keyboards/inline/: builder.py  contacts.py  menu.py  projects.py
bot/middlewares/: __init__.py  auth.py  database.py  i18n.py  logging.py
bot/services/: measurements.py  projects.py  servers.py  tests.py  users.py
bot/services/schemas/: measurements.py  project.py  test.py
bot/utils/: users_export.py
redisdata/: dump.rdb
redisdata/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
(+1 files in other folders)
